# tiffwrite

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: mypy.yml  publish.yml  pytest.yml  wheels.yml  where_is_cargo.yml
py/tiffwrite/: __init__.py
src/: lib.rs  main.rs  py.rs
tests/: test_multiple.py  test_single.py
tiffwrite/: __init__.py
