[package]
name = "tiffwrite"
version = "2024.10.7"
edition = "2021"
authors = ["Wim Pomp <w.pomp@nki.nl>"]
license = "GPL-3.0-or-later"
description = "Write BioFormats/ImageJ compatible tiffs with zstd compression in parallel."
homepage = "https://github.com/wimpomp/tiffwrite"
repository = "https://github.com/wimpomp/tiffwrite"
readme = "README.md"

[lib]
name = "tiffwrite"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
ndarray = "0.16.1"
num = "0.4.3"
rayon = "1.10.0"
zstd = "0.13.2"
numpy = { version = "0.22.0", optional = true }

[dependencies.pyo3]
version = "0.22.5"
features = ["extension-module", "abi3-py310", "generate-import-lib", "anyhow", "multiple-pymethods"]
optional = true

[features]
python = ["dep:pyo3", "dep:numpy"]
