[package]
name = "tiffwrite"
version = "2025.5.0"
edition = "2021"
authors = ["Wim Pomp <w.pomp@nki.nl>"]
license = "MIT"
description = "Write BioFormats/ImageJ compatible tiffs with zstd compression in parallel."
homepage = "https://github.com/wimpomp/tiffwrite"
repository = "https://github.com/wimpomp/tiffwrite"
readme = "README.md"
keywords = ["bioformats", "tiff", "ndarray", "zstd", "fiji"]
categories = ["multimedia::images", "science"]

[lib]
name = "tiffwrite"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
flate2 = "1.1.1"
ndarray = "0.16.1"
num = "0.4.3"
rayon = "1.10.0"
zstd = "0.13.3"
numpy = { version = "0.24.0", optional = true }

[dependencies.pyo3]
version = "0.24.0"
features = ["extension-module", "abi3-py310", "generate-import-lib", "anyhow", "multiple-pymethods"]
optional = true

[features]
python = ["dep:pyo3", "dep:numpy"]
