[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tiffwrite"
dynamic = ["version"]
authors = [{ name = "Wim Pomp", email = "w.pomp@nki.nl" }]
license = "GPLv3"
description = "Write BioFormats/ImageJ compatible tiffs with zstd compression in parallel."
homepage = "https://github.com/wimpomp/tiffwrite"
repository = "https://github.com/wimpomp/tiffwrite"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["colorcet", "matplotlib", "numpy", "tqdm"]

[project.optional-dependencies]
test = ["pytest", "tifffile", "imagecodecs"]

[tool.maturin]
python-source = "py"
features = ["pyo3/extension-module", "python"]
module-name = "tiffwrite.tiffwrite_rs"

[tool.isort]
line_length = 119